SERVER-45008 Make sure allDatabaseCloner completion callback runs on correct executor